# SWMS

./: .gitignore  LICENSE  README.md  detect.py  detection_items.py  pyproject.toml  requirements.txt
