[project]
name = "swms"
version = "1.0.0"
description = "Smart Waste Management System: An AI-powered tool that classifies and analyzes waste items using YOLO object detection and PyTorch-based material prediction to determine recyclable and degradable components."
authors = [
    { name = "Muhammad Fiaz"}
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["AI", "waste", "recycling", "YOLO", "PyTorch", "PyQt6", "smart waste management"]

dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "huggingface-hub>=0.30.1",
    "pillow>=11.1.0",
    "pyqt6>=6.8.1",
    "pyside6>=6.9.0",
    "requests>=2.32.3",
    "safetensors>=0.5.3",
    "tensorflow>=2.19.0",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.0",
    "uvicorn>=0.34.0"
]

[tool.setuptools]
packages = ["swms"]
include-package-data = true
